--- a/examples/basis_fft.yaml
+++ b/examples/basis_fft.yaml
@@ -1,18 +1,18 @@
 
 
 Basis:
-  - dim: 50
-    type: HO
-    freq: 1.
-    x0: 0.
+  - dim: 30
+    type: FFT
+    x0: -6.
+    x1: 6.
     coord: 0
     wfx0: 1.2
     wffreq: 1.5
 
   - dim: 50
-    type: HO
-    freq: 1.0
-    x0: 0.
+    type: FFT
+    x0: -6.
+    x1: 6.
     coord: 1
     wfx0: 2.1
     wffreq: 0.8
@@ -26,7 +26,7 @@ run:
 #  krylov_size: 20
 
   job: Integrate
-  krylov_size: 10
+  krylov_size: 5
   tmax: 20.
   dt: 0.1
   out: 0.1
