working FFT. Added PES evaluation with DVR. Added number basis. Added comments.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,8 @@ target_sources(WavepacketDynamics PUBLIC
         src/Wavefunction.h
         src/Operators.cpp
         src/Operators.h
+        src/Potentials.cpp
+        src/Potentials.h
         src/PrimitiveOperators.cpp
         src/PrimitiveOperators.h
 
