--- a/examples/basis_fft.yaml
+++ b/examples/basis_fft.yaml
@@ -7,18 +7,21 @@ Basis:
     x1: 6.
     coord: 0
     wfx0: 1.2
+    wfp0: 0.
     wffreq: 1.5
 
-  - dim: 50
+  - dim: 30
     type: FFT
     x0: -6.
     x1: 6.
     coord: 1
     wfx0: 2.1
+    wfp0: 0.
     wffreq: 0.8
 
 Hamiltonian:
   name: HO
+  V: none
 
 run:
 #  job: Eigenstates
@@ -26,7 +29,7 @@ run:
 #  krylov_size: 20
 
   job: Integrate
-  krylov_size: 5
+  krylov_size: 10
   tmax: 20.
   dt: 0.1
   out: 0.1
