--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "external/yaml-cpp"]
+	path = external/yaml-cpp
+	url = https://github.com/jbeder/yaml-cpp
 [submodule "external/QuTree"]
 	path = external/QuTree
 	url = https://github.com/roman-ellerbrock/QuTree
