--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,22 +11,17 @@ set(CMAKE_CXX_STANDARD 14)
 
 ### Add submodule for QuTree
 #find_package(QuTree)
-#execute_process(COMMAND git submodule update --init -- external/QuTree
-#        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+execute_process(COMMAND git submodule update --init -- external/QuTree
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(external/QuTree)
+include_directories("external/QuTree")
 
-# Set env and install headers as subdir of QuTree to avoid clashes
-#set(QUTREE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/QuTree
-#        CACHE PATH "QuTree include directory")
-#install(DIRECTORY ${QUTREE_INCLUDE_DIR}/QuTree
-#        DESTINATION ${QuTree_INSTALL_INC_DIR})
-
-
-find_package(yaml-cpp REQUIRED)
-include_directories(${YAML_CPP_INCLUDE_DIR})
-add_library(Yaml INTERFACE IMPORTED)
-
+#find_package(yaml-cpp REQUIRED)
+#include_directories(${YAML_CPP_INCLUDE_DIR})
+#add_library(Yaml INTERFACE IMPORTED)
+add_subdirectory(external/yaml-cpp)
+include_directories("external")
 
 add_executable(WavepacketDynamics main.cpp)
 
