--- a/examples/basis_eigenstates.yaml
+++ b/examples/basis_eigenstates.yaml
@@ -6,8 +6,8 @@ Basis:
     freq: 1.
     x0: 0.
     coord: 0
-    wfx0: 0.
-    wfp0: 1.
+    wfx0: 1.2
+    wfp0: 0.
     wffreq: 1.5
 
   - dim: 50
@@ -15,18 +15,14 @@ Basis:
     freq: 1.0
     x0: 0.
     coord: 1
-    wfx0: 0.
-    wfp0: 1.
+    wfx0: 2.1
+    wfp0: 0.
     wffreq: 0.8
 
 Hamiltonian:
-  name: HO_pes
+  name: HO
 
 run:
-  job: Integrate
-  krylov_size: 10
-  tmax: 20.
-  dt: 0.1
-  out: 0.1
-  accuracy: 1e-6
+  job: Eigenstates
+  krylov_size: 30
 
